--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
         "@types/faker": "^4.1.1",
         "@types/jest": "^21.1.5",
         "@types/node": "^8.0.47",
-        "generator-mono-serverless": "^1.0.0",
+        "aws-sdk": "^2.226.1",
         "jest": "^21.2.1",
         "lerna": "^2.4.0",
+        "prettier": "^1.12.1",
         "semantic-release": "^15.0.0",
         "serverless": "^1.26.1",
         "serverless-dotenv-plugin": "^1.1.2",
@@ -19,6 +20,8 @@
         "serverless-plugin-typescript": "^1.1.5",
         "serverless-webpack": "^5.1.0",
         "ts-jest": "^21.1.4",
+        "tslint": "^5.9.1",
+        "tslint-config-prettier": "^1.12.0",
         "typescript": "^2.5.3",
         "webpack": "^4.0.0",
         "yo": "^2.0.0"
