--- a/packages/avtest-five/package.json
+++ b/packages/avtest-five/package.json
@@ -1,10 +1,12 @@
 {
-    "name": "sls-dynamodb",
+    "name": "avtest-five",
     "version": "0.0.1",
     "main": "build/index.js",
     "types": "build/index.d.js",
+    "license": "MIT",
     "scripts": {
-        "build": "tsc -p ./tsconfig.json",
+        "build": "yarn run lint && tsc -p ./tsconfig.json",
+        "lint": "../../node_modules/tslint/bin/tslint --fix src/**/*.ts",
         "clean": "rimraf ./build",
         "dev": "tsc -p ./tsconfig.json -w",
         "prebuild": "yarn run clean",
@@ -14,9 +16,11 @@
     },
     "devDependencies": {
         "faker": "^4.1.0",
-        "rimraf": "^2.6.2",
         "jest": "^21.2.1",
+        "prettier": "^1.12.1",
+        "rimraf": "^2.6.2",
         "ts-jest": "^21.1.3",
+        "tslint-plugin-prettier": "^1.3.0",
         "typescript": "^2.5.3"
     }
 }
