--- a/packages/sample-dynamo/package.json
+++ b/packages/sample-dynamo/package.json
@@ -13,7 +13,7 @@
         "predev": "yarn run clean",
         "test": "jest -c ../../jest.json",
         "sls-deploy":
-            "yarn run build && ../../node_modules/serverless/bin/serverless deploy -v"
+            "yarn run build && node --require ../../dotenv.js ../../node_modules/serverless/bin/serverless deploy -v"
     },
     "devDependencies": {
         "faker": "^4.1.0",
