--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
         "@types/node": "^8.0.47",
         "aws-sdk": "^2.226.1",
         "jest": "^21.2.1",
+        "format-json": "^1.0.3",
         "lerna": "^2.4.0",
+        "lodash": "^4.17.5",
         "prettier": "^1.12.1",
         "semantic-release": "^15.0.0",
         "serverless": "^1.26.1",
