--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
         "@types/jest": "^21.1.5",
         "@types/node": "^8.0.47",
         "aws-sdk": "^2.226.1",
-        "jest": "^21.2.1",
         "format-json": "^1.0.3",
+        "jest": "^21.2.1",
         "lerna": "^2.4.0",
         "lodash": "^4.17.5",
         "prettier": "^1.12.1",
         "semantic-release": "^15.0.0",
         "serverless": "^1.26.1",
+        "serverless-domain-manager": "^2.3.6",
         "serverless-dotenv-plugin": "^1.1.2",
-        "serverless-offline": "^3.20.2",
+        "serverless-localstack": "^0.2.3",
+        "serverless-offline": "^3.20.3",
         "serverless-plugin-typescript": "^1.1.5",
         "serverless-webpack": "^5.1.0",
         "ts-jest": "^21.1.4",
