--- a/packages/sample-authorizer/package.json
+++ b/packages/sample-authorizer/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "sample-dynamo",
+    "name": "sample-authorizer",
     "version": "0.0.1",
     "main": "build/index.js",
     "types": "build/index.d.js",
@@ -13,14 +13,12 @@
         "predev": "yarn run clean",
         "test": "jest -c ../../jest.json",
         "sls-deploy":
-            "yarn run build && node --require ../../dotenv.js ../../node_modules/serverless/bin/serverless deploy -v"
+            "yarn run build && node --require ../../dotenv.js  ../../node_modules/serverless/bin/serverless deploy -v"
     },
     "devDependencies": {
         "faker": "^4.1.0",
         "jest": "^21.2.1",
         "prettier": "^1.12.1",
-        "serverless-offline-localstack": "^0.0.3",
-        "serverless-offline": "^3.20.3",
         "rimraf": "^2.6.2",
         "ts-jest": "^21.1.3",
         "tslint-plugin-prettier": "^1.3.0",
