--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "serverless-offline": "^3.20.3",
         "serverless-plugin-typescript": "^1.1.5",
         "serverless-webpack": "^5.1.0",
+        "source-map-support": "^0.5.6",
         "ts-jest": "^21.1.4",
         "tslint": "^5.9.1",
         "tslint-config-prettier": "^1.12.0",
