--- a/packages/sample-default/package.json
+++ b/packages/sample-default/package.json
@@ -13,7 +13,13 @@
         "predev": "yarn run clean",
         "test": "jest -c ../../jest.json",
         "sls-deploy":
-            "yarn run build && node --require ../../dotenv.js  ../../node_modules/serverless/bin/serverless deploy -v"
+            "yarn run build && node --require ../../dotenv.js  ../../node_modules/serverless/bin/serverless deploy -v",
+        "sls-remove":
+            "node --require ../../dotenv.js  ../../node_modules/serverless/bin/serverless remove -v",
+        "sls-remove-alias":
+            "node --require ../../dotenv.js  ../../node_modules/serverless/bin/serverless alias remove -v",
+        "sls-logs":
+            "node --require ../../dotenv.js  ../../node_modules/serverless/bin/serverless logs -v -t"
     },
     "devDependencies": {
         "faker": "^4.1.0",
@@ -25,7 +31,6 @@
         "serverless-offline": "^3.20.3",
         "serverless-offline-localstack": "^0.0.3",
         "ts-jest": "^21.1.3",
-        "tslint-plugin-prettier": "^1.3.0",
         "typescript": "^2.5.3"
     }
 }
