--- a/packages/sample-github-hook/package.json
+++ b/packages/sample-github-hook/package.json
@@ -16,8 +16,10 @@
             "yarn run build && node --require ../../dotenv.js  ../../node_modules/serverless/bin/serverless deploy -v",
         "sls-remove":
             "node --require ../../dotenv.js  ../../node_modules/serverless/bin/serverless remove -v",
-	    "sls-logs":
-            "node --require ../../dotenv.js  ../../node_modules/serverless/bin/serverless logs -t -v"
+        "sls-remove-alias":
+            "node --require ../../dotenv.js  ../../node_modules/serverless/bin/serverless alias remove -v",
+        "sls-logs":
+            "node --require ../../dotenv.js  ../../node_modules/serverless/bin/serverless logs -v -t"
     },
     "devDependencies": {
         "faker": "^4.1.0",
@@ -25,7 +27,6 @@
         "prettier": "^1.12.1",
         "rimraf": "^2.6.2",
         "ts-jest": "^21.1.3",
-        "tslint-plugin-prettier": "^1.3.0",
         "typescript": "^2.5.3"
     }
 }
