retrofit lint fixes

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "semantic-release": "^15.0.0",
         "serverless": "^1.26.1",
         "serverless-aws-alias": "^1.7.1",
+        "serverless-aws-documentation": "^1.1.0",
         "serverless-domain-manager": "^2.3.6",
         "serverless-dotenv-plugin": "^1.1.2",
         "serverless-localstack": "^0.2.3",
@@ -26,8 +27,9 @@
         "serverless-webpack": "^5.1.0",
         "source-map-support": "^0.5.6",
         "ts-jest": "^21.1.4",
-        "tslint": "^5.9.1",
-        "tslint-config-prettier": "^1.12.0",
+        "tslint": "^5.10.0",
+        "tslint-config-prettier": "^1.3.0",
+        "tslint-plugin-prettier": "^1.3.0",
         "typescript": "^2.5.3",
         "webpack": "^4.0.0",
         "yo": "^2.0.0"
