--- a/packages/sample-default/serverless.yml
+++ b/packages/sample-default/serverless.yml
@@ -4,6 +4,7 @@ plugins:
   - serverless-offline
   - serverless-webpack
   - serverless-domain-manager
+  - serverless-aws-documentation
 
 provider:
   name: aws
