--- a/packages/sample-github-hook/serverless.yml
+++ b/packages/sample-github-hook/serverless.yml
@@ -3,6 +3,7 @@ service: sample-github-hook
 plugins:
   - serverless-webpack
   - serverless-offline
+  - serverless-aws-documentation
   - serverless-domain-manager
 
 provider:
