--- a/packages/sample-default/package.json
+++ b/packages/sample-default/package.json
@@ -5,7 +5,7 @@
     "types": "build/index.d.js",
     "license": "MIT",
     "scripts": {
-        "build": "yarn run lint && tsc -p ./tsconfig.json",
+        "build": "yarn run lint && yarn run test && tsc -p ./tsconfig.json",
         "lint": "../../node_modules/tslint/bin/tslint --fix src/**/*.ts",
         "clean": "rimraf ./build",
         "dev": "tsc -p ./tsconfig.json -w",
