--- a/packages/sample-swagger/serverless.yml
+++ b/packages/sample-swagger/serverless.yml
@@ -1,6 +1,7 @@
 service: sample-swagger
 
 plugins:
+  - serverless-plugin-typescript
   - serverless-webpack
   - serverless-offline
   - serverless-aws-documentation
@@ -29,12 +30,12 @@ package:
 
 functions:
   sample-swagger:
-    handler: build/index.handler
+    handler: src/index.handler
     environment:
 
     package:
       include:
-        - build/**
+        - src/**
 
     events:
       - http:
@@ -45,7 +46,7 @@ functions:
 
 custom:
   webpack:
-    webpackConfig: '../../webpack.config.js'
+    webpackConfig: '../../../webpack.config.js'
 
   documentation:
       info:
