--- a/packages/sample-authorizer/serverless.yml
+++ b/packages/sample-authorizer/serverless.yml
@@ -1,6 +1,7 @@
 service: sample-authorizer
 
 plugins:
+  - serverless-plugin-typescript
   - serverless-webpack
   - serverless-offline
 
@@ -23,11 +24,11 @@ package:
 
 functions:
   sample-authorizer:
-    handler: build/index.handler
+    handler: src/index.handler
 
     package:
       include:
-        - build/**
+        - src/**
 
     events:
       - http:
@@ -37,4 +38,4 @@ functions:
 custom:
 
   webpack:
-    webpackConfig: '../../webpack.config.js'
+    webpackConfig: '../../../webpack.config.js'
