enable coverage reports

--- a/packages/sample-swagger/package.json
+++ b/packages/sample-swagger/package.json
@@ -11,11 +11,16 @@
         "dev": "yarn run sls-offline",
         "prebuild": "yarn run clean",
         "predev": "yarn run clean",
-        "test": "jest -c ../../jest.json",
-        "sls-deploy": "yarn run build && node --require ../../dotenv.js ../../node_modules/serverless/bin/serverless deploy -v",
-        "sls-offline": "yarn run build && node --require ../../dotenv.js ../../node_modules/serverless/bin/serverless offline -v",
-        "sls-remove": "node --require ../../dotenv.js  ../../node_modules/serverless/bin/serverless remove -v",
-        "sls-remove-alias": "node --require ../../dotenv.js  ../../node_modules/serverless/bin/serverless alias remove -v",
+        "test": "jest -c ../../jest.json --coverage",
+        "sls-deploy":
+            "yarn run build && node --require ../../dotenv.js ../../node_modules/serverless/bin/serverless deploy -v",
+        "sls-offline":
+            "yarn run build && node --require ../../dotenv.js ../../node_modules/serverless/bin/serverless offline -v",
+        "sls-remove":
+            "node --require ../../dotenv.js  ../../node_modules/serverless/bin/serverless remove -v",
+        "sls-remove-alias":
+
+            "node --require ../../dotenv.js  ../../node_modules/serverless/bin/serverless alias remove -v",
         "sls-logs": "node --require ../../dotenv.js  ../../node_modules/serverless/bin/serverless logs -v -t"
     }
 }
