--- a/packages/sample-kms/serverless.yml
+++ b/packages/sample-kms/serverless.yml
@@ -6,6 +6,7 @@ plugins:
   - serverless-webpack
   - serverless-dynamodb-local
   - serverless-offline
+  - serverless-aws-alias
   - serverless-aws-documentation
 
 provider:
@@ -21,7 +22,7 @@ provider:
 
   stackTags: ${file(./serverless-aws-tags.yml):stackTags}
 
-  # role: ${env:SLS_AWS_EXECUTION_ROLE}
+  role: ${env:SLS_AWS_EXECUTION_ROLE}
 
 package:
   individually: true
