--- a/packages/sample-artillery/artillery.yml
+++ b/packages/sample-artillery/artillery.yml
@@ -6,7 +6,7 @@
 # - GTM CI worker nodes based on https://github.com/zotoio/gtm-worker automate this.
 #
 config:
-  target: 'https://zzzz.execute-api.ap-southeast-2.amazonaws.com'
+  target: 'https://41q462ktgb.execute-api.ap-southeast-2.amazonaws.com'
   phases:
     - duration: 60
       arrivalRate: 20
