--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -3,7 +3,9 @@
     "promptValues": {
       "executionAwsRole": "arn:aws:iam::347186442473:role/lambda-execution",
       "kmsEncryptionKeyId": "f7caff09-20ff-4698-b6a5-5ebe3ccf8556",
-      "apiGatewayAuthorizer": ""
+      "apiGatewayAuthorizer": "",
+      "deploymentBucketPrefix": "io.zoto",
+      "snsErrorTopicArn": "arn:aws:sns:ap-southeast-2:347186442473:serverless-errors"
     }
   }
 }
