--- a/packages/sample-http/serverless-aws-environment.yml
+++ b/packages/sample-http/serverless-aws-environment.yml
@@ -7,3 +7,4 @@ environment:
   SLS_DEPLOYMENT_S3_BUCKET_PREFIX: ${env:SLS_DEPLOYMENT_S3_BUCKET_PREFIX}
   SLS_AWS_KMS_KEY_ID: ${env:SLS_AWS_KMS_KEY_ID}
   SLS_AWS_EXECUTION_ROLE: ${env:SLS_AWS_EXECUTION_ROLE}
+  AVTEST: abc
