--- a/packages/sample-http/.env-dev
+++ b/packages/sample-http/.env-dev
@@ -6,3 +6,4 @@ SLS_SNS_ERROR_TOPIC_ARN=arn:aws:sns:ap-southeast-2:347186442473:serverless-error
 SLS_DEPLOYMENT_S3_BUCKET_PREFIX=io.zoto
 SLS_AWS_KMS_KEY_ID=f7caff09-20ff-4698-b6a5-5ebe3ccf8556
 SLS_AWS_EXECUTION_ROLE=arn:aws:iam::347186442473:role/lambda-execution
+AVTEST=abc-dev
