sample grpc protobuf

--- a/package.json
+++ b/package.json
@@ -7,21 +7,29 @@
     "devDependencies": {
         "@types/aws-lambda": "^8.10.1",
         "@types/bunyan": "^1.8.4",
+        "@types/chance": "^1.0.1",
         "@types/faker": "^4.1.1",
         "@types/jest": "^21.1.5",
         "@types/node": "^8.0.47",
+        "apollo-server-lambda": "^2.0.0",
         "artillery": "^1.6.0-21",
         "aws-sdk": "^2.226.1",
         "bunyan": "^1.8.12",
+        "chance": "^1.0.16",
+        "copy-webpack-plugin": "^4.5.2",
         "format-json": "^1.0.3",
         "generator-mono-serverless": "^4.9.1",
+        "graphql": "^0.13.2",
+        "graphql-playground-middleware-lambda": "^1.7.2",
         "jest": "^21.2.1",
         "lerna": "^2.4.0",
         "lodash": "^4.17.5",
         "nsp": "^3.2.1",
         "prettier": "^1.12.1",
+        "protobufjs": "^6.8.8",
         "semantic-release": "^15.0.0",
         "serverless": "^1.28.0",
+        "serverless-apigw-binary": "^0.4.4",
         "serverless-aws-alias": "^1.7.1",
         "serverless-aws-documentation": "^1.1.0",
         "serverless-domain-manager": "^2.3.6",
