--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
         "apollo-server-lambda": "^2.0.0",
         "artillery": "^1.6.0-21",
         "aws-sdk": "^2.226.1",
+        "aws-xray-sdk": "^2.0.0",
         "bunyan": "^1.8.12",
         "chance": "^1.0.16",
         "copy-webpack-plugin": "^4.5.2",
+        "faker": "^4.1.0",
         "format-json": "^1.0.3",
         "generator-mono-serverless": "^4.9.1",
         "graphql": "^0.13.2",
@@ -34,6 +36,7 @@
         "serverless-aws-documentation": "^1.1.0",
         "serverless-domain-manager": "^2.3.6",
         "serverless-dotenv-plugin": "^1.1.2",
+        "serverless-dynamodb-client": "^0.0.2",
         "serverless-dynamodb-local": "^0.2.30",
         "serverless-google-cloudfunctions": "^1.1.1",
         "serverless-kms-secrets": "^1.0.3",
